--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     <header>
         <div class="cabecalho">
             <h1>
-                <img src="/produtos/logo-branco.png" alt="Logo da Barbearia Alura">
+                <img src="./produtos/logo-branco.png" alt="Logo da Barbearia Alura">
             </h1>
             <nav>
                 <ul>
@@ -104,7 +104,7 @@
     </main>
     
     <footer>
-        <img src="/produtos/logo-branco.png" alt="Logo da Barbearia Alura">
+        <img src="./produtos/logo-branco.png" alt="Logo da Barbearia Alura">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
     </footer>
 </body>
