--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="cabecalho">
           <h1>
-              <img src="/produtos/logo-branco.png">
+              <img src="./produtos/logo-branco.png">
           </h1>
           <nav>
               <ul>
@@ -77,7 +77,7 @@
     </main>
 
       <footer>
-        <img src="/produtos/logo-branco.png" alt="">
+        <img src="./produtos/logo-branco.png" alt="">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
     </footer>
   </body>
