--- a/produtos.html
+++ b/produtos.html
@@ -14,7 +14,7 @@
     <header>
         <div class="cabecalho">
             <h1>
-                <img src="/produtos/logo-branco.png" alt="">
+                <img src="./produtos/logo-branco.png" alt="">
             </h1>
             <nav>
                 <ul>
@@ -30,19 +30,19 @@
         <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
-                <img src="/produtos/cabelo.jpg" alt="">
+                <img src="./produtos/cabelo.jpg" alt="">
                 <p class="produto-descricao">Na tesoura ou maquina, como o cliente preferir</p>
                 <p class="produto-preco">R$ 25,00</p>
             </li>
             <li>
                 <h2>Barba</h2>
-                <img src="/produtos/barba.jpg" alt="">
+                <img src="./produtos/barba.jpg" alt="">
                 <p class="produto-descricao">Corte e desenho profissional de barba</p>
                 <p class="produto-preco">R$ 18,00</p>
             </li>
             <li>
                 <h2>Cabelo + Barba</h2>
-                <img src="/produtos/cabelo+barba.jpg" alt="">
+                <img src="./produtos/cabelo+barba.jpg" alt="">
                 <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                 <p class="produto-preco">R$ 35,00</p>
             </li>
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <img src="/produtos/logo-branco.png" alt="">
+        <img src="./produtos/logo-branco.png" alt="">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
     </footer>
 </body>
